# icosistem

./: .babelrc  .editorconfig  .env.example  .env.keys.secure  .env.local  .env.production.template  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CODE_REVIEW_SUMMARY.md  Dockerfile  Makefile  README.md  SECURITY_CHECKLIST.md  SETUP.md  add_all_exceptions.py  app.py  app_simple.py  bandit.yaml  celery_worker.py  comprehensive_patch.py  config.py  data.db  demo_complete.py  docker-compose.yml  final_emergency_patch.py  fix_missing_imports.py  init_database.py  logging_config.json  package-lock.json  package.json  pyotp_stub.py  pyproject.toml  pytest.ini  quick_patch.py  requirements-core.txt  requirements-dev.txt  requirements-optimized.txt  (+13 more)
.github/codeql/: codeql-config.yml
.github/workflows/: cd.yml  ci.yml  dependency-update.yml  security.yml
app/: __init__.py  comands.py  config.py  extensions.py  extensions_modern.py  extensions_simple.py
app/api/: __init__.py
app/api/middleware/: __init__.py  auth.py  cors.py  rate_limiting.py
app/api/modern/: __init__.py  auth.py  health.py  v2.py
app/api/v1/: __init__.py  allies.py  analytics.py  auth.py  clients.py  documents.py  entrepreneurs.py  meetings.py  messages.py  projects.py  users.py  webhooks.py
app/core/: __init__.py  constants.py  context_processors.py  exceptions.py  permissions.py  security.py
app/forms/: __init__.py  admin.py  ally.py  auth.py  base.py  client.py  entrepreneur.py  meeting.py  project.py  validators.py
app/models/: __init__.py  activity_log.py  admin.py  admin_backup.py  ally.py  analytics.py  application.py  availability.py  base.py  client.py  config.py  dashboard_service.py  document.py  email_bounce.py  email_campaign.py  email_log.py  email_suppression.py  email_template.py  email_tracking.py  entrepreneur.py  evaluation.py  meeting.py  mentorship.py  message.py  milestone.py  mixins.py  notification.py  oauth_app.py  oauth_audit_log.py  oauth_consent.py  oauth_integration.py  oauth_provider.py  oauth_token.py  organization.py  program.py  project.py  relationship.py  task.py  user.py
app/schemas/: __init__.py  auth.py  common.py  user.py
app/services/: __init__.py  analytics_service.py  base.py  currency.py  email.py  entrepreneur_service.py  file_storage.py  google_calendar.py  google_meet.py  integration_hub.py  mentorship_service.py  modern_base.py  notification_service.py  oauth.py  project_service.py  sms.py  storage.py  user_service.py
app/sockets/: __init__.py  decorators.py  events.py  middleware.py  namespaces.py
app/sockets/handlers/: __init__.py  chat.py  notifications.py  presence.py
app/static/css/: bootstrap.min.css  dashboard.css  main.css
app/static/js/: bootstrap.bundle.min.js  calendar.js  charts.js  chat.js  jquery.min.js  main.js  socket.io.min.js
app/tasks/: __init__.py  analytics_tasks.py  backup_tasks.py  celery_app.py  email_tasks.py  maintenance_tasks.py  notification_tasks.py
app/templates/: base.html  index.html
app/templates/admin/: allies.html  analytics.html  assign_ally.html  dashboard.html  entrepreneurs.html  organizations.html  programs.html  settings.html  user_form.html  users.html
app/templates/ally/: calendar.html  dashboard.html  desktop.html  entrepreneur_detail.html  entrepreneurs.html  hours.html  mentorship.html  messages.html  profile.html  register_hours.html  reports.html
app/templates/auth/: forgot_password.html  login.html  register.html  reset_password.html  verify_email.html
app/templates/client/: analytics.html  dashboard.html  directory.html  entrepreneurs.html  impact.html  impact_dashboard.html  reports.html
app/templates/components/: cards.html  charts.html  forms.html  modals.html  navbar.html  pagination.html  sidebar.html
app/templates/entrepreneur/: calendar.html  dashboard.html  desktop.html  documents.html  mentorship.html  messages.html  profile.html  progress.html  projects.html  tasks.html
app/templates/error/: 403.html  404.html  500.html
app/templates/errors/: 403.html  404.html  500.html  maintenance.html
app/templates/layouts/: admin.html  dashboard.html  public.html
app/utils/: __init__.py  cache_utils.py  crypto_utils.py  date_utils.py  db_utils.py  decorators.py  excel.py  export_utils.py  file_utils.py  formatters.py  health.py  import_utils.py  logging.py  monitoring.py  notifications.py  pdf.py  security_utils.py  string_utils.py  validators.py
app/views/: __init__.py  auth.py  errors.py  main.py
app/views/admin/: __init__.py  allies.py  analytics.py  dashboard.py  entrepreneurs.py  organizations.py  programs.py  settings.py  users.py
app/views/ally/: __init__.py  calendar.py  dashboard.py  desktop.py  entrepreneurs.py  hours.py  mentorship.py  messages.py  profile.py  (+1 more)
config/: __init__.py  base.py  development.py  docker.py  logging.py  production.py  testing.py
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.prod.yml  nginx.conf
docker/scripts/: entrypoint.sh  wait-for-it.sh
docs/: ANALISIS_COMPLETO.md  API.md  API_REFERENCE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  INSTALATION.md  MODERN_ARCHITECTURE.md  README.md  api.md  desarrollo.md  despliegue.md  instalacion.md  manual-usuario.md
docs/architecture/: database.md  integrations.md  overview.md
esquema de base de datos/: esquema.sql
instance/: config.py
migrations/: alembic.ini  env.py  script.py.mako
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
patches/: missing_functions_patch.py
runners/: init_database.py  run.py  run_minimal.py
scripts/: backup.py  deploy.py  health_check.py  migrate_data.py  seed_data.py  setup.py
stubs/: pandas.py  pyotp.py
tests/: __init__.py  conftest.py  fixtures.py  test_admin.py  test_ally.py  test_auth.py  test_client.py  test_entrepreneur.py  test_minimal.py  test_models.py  test_system.py
tests/functional/: test_workflows.py
tests/integration/: test_api.py
tests/modern/: conftest.py  test_auth_api.py
tests/unit/: __init__.py  test_models.py  test_utils.py
utils/: modernize_imports.py
(+127 files in other folders)
